# nlp-spam-detector-api

./: .dockerignore  .env.example  .gitignore  Dockerfile.cpu  Dockerfile.nvidia  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-publish.yml
requirements/: base.txt  cpu.txt  dev.txt  metal.txt  nvidia.txt
scripts/: predict_cli.py  smoke_api.py  train_tensorflow.py
src/spam_detector/: __init__.py  main.py
src/spam_detector/adapters/api/: fastapi_app.py  schemas.py
src/spam_detector/adapters/ml/: __init__.py  keyword_model.py  tensorflow_model.py
src/spam_detector/application/: __init__.py
src/spam_detector/application/ports/: __init__.py  model_port.py
src/spam_detector/application/use_cases/: predict_spam.py
src/spam_detector/composition_root/: __init__.py  container.py
src/spam_detector/domain/: __init__.py  prediction.py  text_cleaning.py
tests/adapters/: test_fastapi_adapter.py
tests/application/: test_predict_spam.py
tests/domain/: test_text_cleaning.py
